--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.427.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
