--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/resume/page.jsx"
+    "app/about/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
